scroll changes fixed on query wizard model

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #e7c07e; }
+  background: #1317f6; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #34506e; }
+  background: #5272a8; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #5c71c6; }
+  background: #7e34b2; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #8cfcce; }
+  background: #558d3d; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #a58044; }
+  background: #4c2387; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #1d6386; }
+  background: #3f5f6d; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #a01c58; }
+  background: #7991b4; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a9456a; }
+  background: #070f9c; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b80b0d; }
+  background: #9f4c61; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #d85d2e; }
+  background: #ec06dc; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #ccc5a1; }
+  background: #2172d4; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #d2a579; }
+  background: #799519; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #e00b04; }
+  background: #0baad4; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #30d769; }
+  background: #931e43; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #53a7b4; }
+  background: #71d71d; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #f0fa87; }
+  background: #76d488; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #8697b6; }
+  background: #983aae; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d3c041; }
+  background: #8f5684; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #b9b0c5; }
+  background: #7a2687; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d75ec1; }
+  background: #a5fa9c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #271a67; }
+  background: #48bd6f; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #340a48; }
+  background: #825b88; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #1339f0; }
+  background: #f09dac; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #a6d5a9; }
+  background: #d4f45d; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #37e996; }
+  background: #a48e38; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #f54176; }
+  background: #9b33c1; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #5b2c65; }
+  background: #953f7f; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #bdc062; }
+  background: #05347b; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #895735; }
+  background: #0bba8d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #85e36a; }
+  background: #9a5e6d; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #4ceddc; }
+  background: #b82e11; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #aa59aa; }
+  background: #cf7b8a; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #2d63ea; }
+  background: #39ec53; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #0933df; }
+  background: #583b62; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #f0cc69; }
+  background: #50a0ae; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #2b35ee; }
+  background: #f4c3a8; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #ab3966; }
+  background: #e4b391; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ff7216; }
+  background: #252391; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #b7a64d; }
+  background: #86dd44; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #c861e0; }
+  background: #2a41cb; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #81bc22; }
+  background: #4f3641; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #8e8457; }
+  background: #cf9bea; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f0a30d; }
+  background: #591930; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #9e02ea; }
+  background: #4fe844; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #222191; }
+  background: #b98862; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #3388fc; }
+  background: #35d65e; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #95594f; }
+  background: #a4131c; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #84f342; }
+  background: #468265; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #047996; }
+  background: #639ad6; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #35e7e7; }
+  background: #36bee5; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #13fd3e; }
+  background: #117b94; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #437979; }
+  background: #fafd88; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #aeb360; }
+  background: #7cd223; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3dde2d; }
+  background: #68494b; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #8a81cf; }
+  background: #4a92cf; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #5c3cf7; }
+  background: #b32107; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #f791de; }
+  background: #9c822a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #786515; }
+  background: #f1a81b; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #fa29bc; }
+  background: #d46b68; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #c3b074; }
+  background: #af816c; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #9b9805; }
+  background: #ff46a6; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #926b71; }
+  background: #c6bb62; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #e80951; }
+  background: #1a0e4c; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #8b5bed; }
+  background: #0f1c57; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #1ff350; }
+  background: #91add3; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #0860f2; }
+  background: #760deb; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #ed28e4; }
+  background: #a284d0; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #9027d5; }
+  background: #1a21a4; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #aad127; }
+  background: #0df991; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #76508d; }
+  background: #51fe4c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #267ccc; }
+  background: #814591; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #7933f0; }
+  background: #41994d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #075396; }
+  background: #d77242; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #b2f464; }
+  background: #c5f352; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #03ae39; }
+  background: #29c756; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e9edbe; }
+  background: #2de76b; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #43dfa5; }
+  background: #75823b; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #c43cc0; }
+  background: #c91607; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #c5bd5b; }
+  background: #d71e94; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #d08d1e; }
+  background: #7accd1; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #f1465e; }
+  background: #ec0479; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #cdcf03; }
+  background: #15fc36; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #dd574c; }
+  background: #fcd5c3; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #49601b; }
+  background: #a7a603; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #99e45e; }
+  background: #feaf54; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #bee197; }
+  background: #d908eb; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #ee9223; }
+  background: #5a913e; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #e9b6ac; }
+  background: #b319ba; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #ee9c4b; }
+  background: #5cb5b1; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #d28d31; }
+  background: #ce8e62; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #286709; }
+  background: #17b2f6; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #8be78a; }
+  background: #963885; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #1fbb2a; }
+  background: #a0dc10; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #96d566; }
+  background: #e339c5; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #dc02fc; }
+  background: #eade66; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #485ef1; }
+  background: #80da10; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #5c74ad; }
+  background: #f6778e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #46ab4d; }
+  background: #db7d12; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #926010; }
+  background: #5db583; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #0fa3d9; }
+  background: #8fea0b; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11457,7 +11457,7 @@ input:checked + .sliders:before {
   display: flex !important;
   justify-content: space-between !important;
   align-items: center !important;
-  margin-bottom: 43px;
+  margin-bottom: 0px;
   z-index: 2; }
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img {
     margin-left: 10px !important;
@@ -11471,10 +11471,10 @@ input:checked + .sliders:before {
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn::after {
       content: "";
       width: 0;
-      height: 68px;
+      height: 50px;
       position: absolute;
       border: 1px solid #776fff;
-      top: -75px;
+      top: -57px;
       left: 38px; }
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn a {
       color: #000000;
@@ -11510,10 +11510,10 @@ input:checked + .sliders:before {
     .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter::after {
       content: "";
       width: 0;
-      height: 96px;
+      height: 54px;
       position: absolute;
       border: 1px solid #776fff;
-      top: -76px;
+      top: -33px;
       left: 41px; }
     .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter div {
       z-index: 2; }
@@ -11838,8 +11838,44 @@ input:checked + .sliders:before {
     padding-right: 15px; }
 
   .dashboard-dropdown-menu {
-    margin-bottom: 30px; } }
+    margin-bottom: 30px; }
+
+  .query-wizard-exp-contents {
+    overflow-x: auto; }
+    .query-wizard-exp-contents .query-wizard-expension {
+      background: transparent;
+      white-space: nowrap;
+      padding: initial; }
+      .query-wizard-exp-contents .query-wizard-expension div {
+        margin: 0 3px; }
+      .query-wizard-exp-contents .query-wizard-expension .hidden {
+        display: block !important;
+        visibility: hidden; }
+      .query-wizard-exp-contents .query-wizard-expension .all-select,
+      .query-wizard-exp-contents .query-wizard-expension .exists-dropdown {
+        width: 75px; }
+      .query-wizard-exp-contents .query-wizard-expension select.query-wizard-dropdown-large {
+        width: 300px; }
+      .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img {
+        width: 106px; } }
 /*767 screen end here*/
+@media only screen and (min-width: 320px) and (max-width: 1023px) {
+  .query-wizard-exp-contents {
+    overflow-x: auto; }
+    .query-wizard-exp-contents .query-wizard-expension {
+      background: transparent;
+      white-space: nowrap;
+      padding: initial; }
+      .query-wizard-exp-contents .query-wizard-expension .hidden {
+        display: block !important;
+        visibility: hidden; }
+      .query-wizard-exp-contents .query-wizard-expension .all-select,
+      .query-wizard-exp-contents .query-wizard-expension .exists-dropdown {
+        width: 75px; }
+      .query-wizard-exp-contents .query-wizard-expension select.query-wizard-dropdown-large {
+        width: 300px; }
+      .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img {
+        width: 106px; } }
 @media screen and (max-width: 767px) {
   .dashboard-container
   .dashboard-widget-container {
