--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #1317f6; }
+  background: #7f5f1e; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #5272a8; }
+  background: #d7294b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #7e34b2; }
+  background: #ede085; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #558d3d; }
+  background: #1aa613; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #4c2387; }
+  background: #e25457; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #3f5f6d; }
+  background: #0b78c6; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #7991b4; }
+  background: #609296; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #070f9c; }
+  background: #4fe08f; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #9f4c61; }
+  background: #90fcac; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #ec06dc; }
+  background: #adda6e; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #2172d4; }
+  background: #3190cd; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #799519; }
+  background: #52cd85; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #0baad4; }
+  background: #c810fa; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #931e43; }
+  background: #a4abfd; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #71d71d; }
+  background: #d7cdd6; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #76d488; }
+  background: #667654; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #983aae; }
+  background: #1256db; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #8f5684; }
+  background: #6570b7; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #7a2687; }
+  background: #14b575; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #a5fa9c; }
+  background: #3f0760; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #48bd6f; }
+  background: #622737; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #825b88; }
+  background: #32dc7e; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #f09dac; }
+  background: #893789; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #d4f45d; }
+  background: #eb18e4; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a48e38; }
+  background: #086958; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #9b33c1; }
+  background: #7437c0; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #953f7f; }
+  background: #91385c; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #05347b; }
+  background: #b3bd5a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #0bba8d; }
+  background: #58ac0d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #9a5e6d; }
+  background: #221f4e; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #b82e11; }
+  background: #52e7ef; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #cf7b8a; }
+  background: #341eca; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #39ec53; }
+  background: #dfbaa7; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #583b62; }
+  background: #5f0ce5; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #50a0ae; }
+  background: #c7cc41; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #f4c3a8; }
+  background: #b04e96; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #e4b391; }
+  background: #5b44b3; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #252391; }
+  background: #b322f0; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #86dd44; }
+  background: #a9d0d5; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #2a41cb; }
+  background: #0cb917; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #4f3641; }
+  background: #1fcb3f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #cf9bea; }
+  background: #b6bef6; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #591930; }
+  background: #4c3ba6; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #4fe844; }
+  background: #c458e3; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #b98862; }
+  background: #e37690; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #35d65e; }
+  background: #d09219; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #a4131c; }
+  background: #84cf19; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #468265; }
+  background: #e9f934; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #639ad6; }
+  background: #73acdc; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #36bee5; }
+  background: #5536b4; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #117b94; }
+  background: #5577e7; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #fafd88; }
+  background: #18c4ed; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #7cd223; }
+  background: #e4513b; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #68494b; }
+  background: #2d1cd4; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #4a92cf; }
+  background: #0b7357; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #b32107; }
+  background: #aa8335; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #9c822a; }
+  background: #1ae17e; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #f1a81b; }
+  background: #b6ed8f; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #d46b68; }
+  background: #0a45ec; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #af816c; }
+  background: #f30e26; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ff46a6; }
+  background: #8753c4; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c6bb62; }
+  background: #1eb833; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #1a0e4c; }
+  background: #b682d0; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #0f1c57; }
+  background: #8d942d; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #91add3; }
+  background: #557d6d; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #760deb; }
+  background: #924f1c; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #a284d0; }
+  background: #9834cb; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #1a21a4; }
+  background: #58fa75; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #0df991; }
+  background: #9c2759; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #51fe4c; }
+  background: #4a03a5; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #814591; }
+  background: #51ce43; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #41994d; }
+  background: #e96850; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #d77242; }
+  background: #af2673; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #c5f352; }
+  background: #6974af; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #29c756; }
+  background: #674992; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #2de76b; }
+  background: #e4f09b; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #75823b; }
+  background: #2921a0; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #c91607; }
+  background: #599975; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #d71e94; }
+  background: #c36020; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #7accd1; }
+  background: #022762; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #ec0479; }
+  background: #903145; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #15fc36; }
+  background: #57cc66; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #fcd5c3; }
+  background: #f7a183; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #a7a603; }
+  background: #3f6c36; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #feaf54; }
+  background: #4ff4b5; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #d908eb; }
+  background: #7e99b1; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #5a913e; }
+  background: #4d141f; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #b319ba; }
+  background: #c412d4; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #5cb5b1; }
+  background: #6d7cc8; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #ce8e62; }
+  background: #ad1ec5; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #17b2f6; }
+  background: #248738; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #963885; }
+  background: #5c5a99; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #a0dc10; }
+  background: #1aeda0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #e339c5; }
+  background: #532950; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #eade66; }
+  background: #c2e0b7; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #80da10; }
+  background: #3698e0; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #f6778e; }
+  background: #0aa79e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #db7d12; }
+  background: #cbb9a1; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #5db583; }
+  background: #344eb6; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #8fea0b; }
+  background: #d4c473; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10234,6 +10234,37 @@ table .bold-heading {
 .widget-add-module {
   width: 100%;
   margin: 15px 0px; }
+
+.privacy-policy-search-container {
+  display: flex;
+  align-items: center;
+  margin-top: 40px; }
+  .privacy-policy-search-container .policy-search-heading {
+    font-size: 16px;
+    margin-right: 20px; }
+  .privacy-policy-search-container .policy-search {
+    flex: 1; }
+
+.policy-accordions-box {
+  padding: 10px 15px;
+  margin: 4px 14px 0px;
+  background-color: white;
+  border-radius: 13px;
+  cursor: pointer;
+  border: 1px solid #dcdde1; }
+  .policy-accordions-box .collapse-heading-btn-row {
+    display: flex;
+    align-items: center; }
+    .policy-accordions-box .collapse-heading-btn-row span:first-child {
+      flex: 1;
+      color: #4c4c4c;
+      font-family: 'proxima-semi-bold';
+      display: flex;
+      align-items: center; }
+      .policy-accordions-box .collapse-heading-btn-row span:first-child div:first-child {
+        margin-right: 10px; }
+  .policy-accordions-box .multi-collapse {
+    margin-top: 20px; }
 
 @font-face {
   font-family: 'proxima-semi-bold';
@@ -11663,6 +11694,55 @@ input:checked + .sliders:before {
 
 .list-ic .active ~ li::before {
   background: lightblue; }
+
+.process-button-wrapper {
+  margin: 15px 0px 40px; }
+  .process-button-wrapper ul {
+    display: flex; }
+    .process-button-wrapper ul li span {
+      background: #e0e0e1;
+      margin: 0px 15px;
+      padding: 15px 60px !important;
+      border-radius: 8px;
+      color: #c0c0c0;
+      font-weight: bold;
+      position: relative; }
+      .process-button-wrapper ul li span::before {
+        content: "";
+        width: 0;
+        height: 0;
+        border-top: 8px solid transparent;
+        border-bottom: 8px solid transparent;
+        border-left: 8px solid #e0e0e1;
+        position: absolute;
+        top: 35%;
+        right: -8px; }
+    .process-button-wrapper ul li:last-child::before {
+      content: "";
+      display: none; }
+    .process-button-wrapper ul .active-btn {
+      background: #776fff;
+      padding: 20px 60px !important;
+      color: #fff; }
+      .process-button-wrapper ul .active-btn::before {
+        content: "";
+        border-left: 8px solid #776fff; }
+
+.policy-search .search-wrap-standard::before {
+  display: none; }
+.policy-search .search-wrap-standard input {
+  border-radius: 5px;
+  padding: 10px 10px;
+  padding-left: 20px;
+  border-radius: 5px; }
+
+.policy-accordions-wrapper .policy-accordions-box {
+  margin: 12px 14px !important; }
+  .policy-accordions-wrapper .policy-accordions-box .collapse-heading-btn-row {
+    font-size: 14px; }
+.policy-accordions-wrapper .p-selected {
+  background: #f0f0f0;
+  border: 1px solid #776fff; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
