--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3721,3 +3721,58 @@ table .bold-heading {
   width: 100%;
   margin: 15px 0px;
 }
+
+
+
+
+.privacy-policy-search-container {
+  display: flex;
+  align-items: center;
+  margin-top: 40px;
+
+  .policy-search-heading {
+    font-size: 16px;
+    margin-right: 20px;
+  }
+
+  .policy-search {
+    flex: 1;
+  }
+}
+
+
+
+.policy-accordions-box {
+  padding: 10px 15px;
+  margin: 4px 14px 0px;
+  background-color: white;
+  border-radius: 13px;
+  cursor: pointer;
+  border: 1px solid #dcdde1;
+
+
+  .collapse-heading-btn-row {
+
+    display: flex;
+    align-items: center;
+
+    span:first-child {
+      flex: 1;
+      color: #4c4c4c;
+      font-family: 'proxima-semi-bold';
+      display: flex;
+      align-items: center;
+
+      div:first-child {
+        margin-right: 10px;
+      }
+    }
+  }
+
+
+.multi-collapse {
+  margin-top: 20px;
+}
+
+
+}
